[gd_scene load_steps=4 format=3 uid="uid://pua5n66psct1"]

[ext_resource type="Script" path="res://UI/Widgets/ingredient_slot.gd" id="1_pgm87"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7oqe6"]
load_path = "res://.godot/imported/Items.png-83e9f7e40c5cd3bb7e01f5729267c95e.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_6d6j2"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_7oqe6")
region = Rect2(0, 0, 64, 64)

[node name="IngredientSlot" type="ReferenceRect"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0, 0, 0, 1)
border_width = 4.0
editor_only = false
script = ExtResource("1_pgm87")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_6d6j2")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "00"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Highlight" type="ReferenceRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
border_color = Color(1, 1, 1, 1)
border_width = 4.0
editor_only = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
